add explanation in Q16 & resolve Q17-Q18

--- a/ch5_dfs_bfs.ipynb
+++ b/ch5_dfs_bfs.ipynb
@@ -464,13 +464,13 @@
     "lab = [] # 연구실 지도 정보를 담을 리스트 선언\n",
     "empty = [] # 빈칸의 좌표를 담을 리스트 선언\n",
     "virus = [] # 바이러스칸의 좌표를 담을 리스트 선언\n",
-    "for x in range(N):\n",
+    "for x in range(N): # 지도의 모양을 한 줄 씩 받아옴\n",
     "    data = list(map(int, input().split()))\n",
     "    lab.append(data)\n",
     "    for y in range(M):\n",
-    "        if data[y] == 0:\n",
+    "        if data[y] == 0: # 각 줄에서 0인 칸은 빈 칸 좌표 리스트에 해당 좌표를 추가\n",
     "            empty.append((x, y))\n",
-    "        elif data[y] == 2:\n",
+    "        elif data[y] == 2: # 각 줄에서 2인 칸은 바이러스 칸 좌표 리스트에 해당 좌표를 추가\n",
     "            virus.append((x, y))\n",
     "            \n",
     "# 바이러스 이동 정보 선언(상 하 좌 우)\n",
@@ -481,35 +481,39 @@
     "def bfs(lab, virus):\n",
     "    q = deque(virus)\n",
     "    \n",
-    "    while q:\n",
+    "    # 바이러스가 갈 수 있는 모든 칸을 감염시킴\n",
+    "    while q: # q에 원소가 있는 동안 반복\n",
     "        x, y = q.popleft()\n",
     "        \n",
-    "        for i in range(4):\n",
+    "        for i in range(4): # 바이러스가 퍼질 수 있는 네 방향을 모두 생각\n",
     "            nx = x + dx[i]\n",
     "            ny = y + dy[i]\n",
     "            \n",
-    "            if nx < 0 or nx >= N or ny < 0 or ny >= M:\n",
+    "            if nx < 0 or nx >= N or ny < 0 or ny >= M: # 범위를 벗어나면 무시\n",
     "                continue\n",
     "            \n",
-    "            if lab[nx][ny] == 0:\n",
-    "                q.append((nx, ny))\n",
-    "                lab[nx][ny] = 2\n",
+    "            if lab[nx][ny] == 0: # 범위를 벗어나지 않고 해당 좌표가 빈 칸이라면\n",
+    "                q.append((nx, ny)) # 큐에 추가하고\n",
+    "                lab[nx][ny] = 2 # 바이러스 감염\n",
     "    \n",
-    "    safety = 0\n",
-    "    for x in range(N):\n",
+    "    # 바이러스 감염이 끝난 후\n",
+    "    safety = 0 # 안전지대 수를 셀 변수 선언\n",
+    "    for x in range(N): # 모든 좌표를 돌면서\n",
     "        for y in range(M):\n",
-    "            if lab[x][y] == 0:\n",
-    "                safety += 1\n",
-    "                \n",
+    "            if lab[x][y] == 0: # 빈 칸(안전지대)라면\n",
+    "                safety += 1 # 안전지대 수에 1 추가\n",
+    "    \n",
+    "    # 안전 지대 수를 리턴\n",
     "    return safety\n",
     "\n",
-    "cand = []\n",
-    "for comb in combinations(empty, 3):\n",
-    "    temp_lab = deepcopy(lab)\n",
+    "cand = [] # 모든 경우의 수에 대한 안전지대 수를 담을 리스트 선언\n",
+    "for comb in combinations(empty, 3): # 빈 칸 중 세 개를 고르는 경우의 수를 모두 돌면서\n",
+    "    temp_lab = deepcopy(lab) # 연구실 지도를 deepcopy하여 각각의 경우에 대한 맵을 만들기 위함\n",
     "    for x, y in comb:\n",
-    "        temp_lab[x][y] = 1\n",
-    "    cand.append(bfs(temp_lab, virus))\n",
+    "        temp_lab[x][y] = 1 # 그 세 칸을 벽으로 바꾸고\n",
+    "    cand.append(bfs(temp_lab, virus)) # bfs를 진행한 뒤 리턴 값을 cand에 추가\n",
     "\n",
+    "# 안전 지대 수 중 가장 큰 경우를 리턴\n",
     "print(max(cand))"
    ]
   },
@@ -620,7 +624,10 @@
     "* 메모리 제한 256MB\n",
     "\n",
     "#### 아이디어\n",
-    "* "
+    "* 바이러스의 종류별 첫 위치를 담을 딕셔너리를 만들자\n",
+    "* bfs를 돌리되, 번호가 작은 바이러스부터 큰 바이러스의 순서대로 진행해야 한다. 그럼 처음 queue에 넣을 때 그 순서로 넣으면 될 것 같다.\n",
+    "* 반복마다 시간 체크를 하면 안 되고, 모든 바이러스를 상하좌우로 한 칸씩 감염시킨 후에 시간 체크를 해야한다 => 큐에 시간을 넣어버리자\n",
+    "* 바이러스 첫 위치를 딕셔너리로 받았는데, 테케 중 바이러스 번호를 건너 뛴 케이스가 있는 것 같다. 딕셔너리에서 밸류인 좌표값을 받아올 때 키가 있는지를 체크해 주지 않으면 KeyError가 발생하더라."
    ]
   },
   {
@@ -629,10 +636,197 @@
    "metadata": {},
    "source": [
     "#### 시간 복잡도\n",
-    "* \n",
+    "* O((K * 바이러스총개수) + N^2) 정도일 듯하다\n",
+    "* K는 최대 1000, N은 최대 200이고, 바이러스총개수도 최악의 경우 모든 맵에 있다면 40000개 이므로 충분히 1초 내에 가능할 것으로 보임\n",
     "\n",
     "#### 해설 본 후\n",
-    "* "
+    "* 이전에 푼 풀이에선 바이러스 첫 위치를 (바이러스번호, x좌표, y좌표)들의 리스트로 받았고, 시간 체크를 할 때 직전 반복에서 다룬 바이러스 정보를 받아와 해당 바이러스가 현재 바이러스와 번호가 다르고, 현재 바이러스 번호가 1인 경우에 시간을 진행시켰다.\n",
+    "* 딕셔너리로 만들어 반복문 두 개 돌리며 구성하는 것보다 그냥 맵 정보 받아올 때 시간이랑 바이러스 정보까지 한 리스트에 튜플로 넣고 그걸 sort하는 게 더 절약이겠다.\n",
+    "* S초 됐을 때 print하는 것과 반복문이 끝나고 print하는 것을 나누지 말고, 그냥 S초 됐을 때 break만 하고 while이 끝난 뒤에 print하면 된다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import deque\n",
+    "\n",
+    "# 시험관의 크기 N, 바이러스 종류 개수 K 입력\n",
+    "N, K = map(int, input().split())\n",
+    "\n",
+    "# 시험관의 정보 입력\n",
+    "tube = []\n",
+    "virus = dict() # 바이러스 시작 위치를 담기 위한 딕셔너리 선언\n",
+    "for x in range(N): # 시험관의 정보를 한 줄 씩 받아옴\n",
+    "    data = list(map(int, input().split()))\n",
+    "    tube.append(data)\n",
+    "    for y in range(N):\n",
+    "        if data[y] != 0: # 각 줄에서 0이 아닌 경우(바이러스가 있는 경우)\n",
+    "            # 해당 바이러스 숫자를 key로 하고 좌표를 value로 하는 요소 만들어서 추가\n",
+    "            virus[data[y]] = virus.get(data[y], []) + [(x, y)] # 기존에 요소가 없었다면 빈 리스트에 해당 좌표를 추가하여 생성, 있었다면 기존 value에 담긴 리스트에 해당 좌표를 추가하여 재할당\n",
+    "\n",
+    "# 경과한 시간 S, 타겟 좌표 X, Y 입력\n",
+    "S, X, Y = map(int, input().split())\n",
+    "\n",
+    "q = deque() # 큐 선언\n",
+    "\n",
+    "# 바이러스 이동 방향 선언 (상 하 좌 우)\n",
+    "dx = [-1, 1, 0, 0]\n",
+    "dy = [0, 0, -1, 1]\n",
+    "\n",
+    "# 바이러스 번호 별 오름차순으로 큐에 추가하기\n",
+    "for i in range(1, K+1): # 바이러스 번호를 돌면서\n",
+    "    # 해당 바이러스가 시험관에 있다면\n",
+    "    if i in virus: ## 여기서 이걸 안 해주면 테케 자체에서 번호를 건너 뛴 바이러스가 있는 건지 KeyError가 발생한다.\n",
+    "        for x, y in virus[i]: # 해당 바이러스가 있는 모든 좌표를 불러와\n",
+    "            q.append((x, y, i, 0)) # (x좌표, y좌표, 바이러스 번호, 경과 시간)의 형태로 큐에 추가\n",
+    "\n",
+    "# 바이러스가 S초 이전에 시험관을 모두 채우는 경우를 고려하기 위해 선언\n",
+    "already_full = True\n",
+    "\n",
+    "while q: # 큐에 원소가 있는 동안 반복\n",
+    "    x, y, v, t = q.popleft() # x, y, 바이러스 종류, 경과한 시간\n",
+    "    \n",
+    "    if t == S: # 경과한 시간이 S초라면\n",
+    "        print(tube[X-1][Y-1]) # 해당 위치의 바이러스 정보를 출력하고\n",
+    "        already_full = False # 시험관이 차지 않았으므로 False로 재할당\n",
+    "        break # 반복 중지\n",
+    "    \n",
+    "    # 바이러스 이동 방향 4방향을 모두 고려\n",
+    "    for i in range(4):\n",
+    "        nx = x + dx[i]\n",
+    "        ny = y + dy[i]\n",
+    "        \n",
+    "        # 시험관 밖으로 벗어나면 무시\n",
+    "        if nx < 0 or nx >= N or ny < 0 or ny >= N:\n",
+    "            continue\n",
+    "        \n",
+    "        # 시험관을 벗어나지 않고 바이러스가 없는 칸이라면\n",
+    "        if tube[nx][ny] == 0:\n",
+    "            q.append((nx, ny, v, t+1)) # 새로운 좌표와 경과한 시간을 업데이트하여 큐에 추가\n",
+    "            tube[nx][ny] = v # 해당 칸을 해당 바이러스로 감염\n",
+    "            \n",
+    "# 반복이 끝나면(중지되면)\n",
+    "else:\n",
+    "    if already_full: # S초가 되기 전에 바이러스가 가득 차 끝난 거라면\n",
+    "        print(tube[X-1][Y-1]) # 해당 위치의 바이러스 정보 출력\n",
+    "            "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q18. 괄호 변환\n",
+    "https://school.programmers.co.kr/learn/courses/30/lessons/60058"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 제한\n",
+    "* 풀이 시간 20분\n",
+    "* 시간 제한 1초\n",
+    "* 메모리 제한 128MB\n",
+    "\n",
+    "#### 아이디어\n",
+    "* 조건대로 구현하기.\n",
+    "* u, v를 분리하는 것과 올바른 괄호 문자열인지 확인하는 것은 따로 함수를 만드는 게 편할 것 같다."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 시간 복잡도\n",
+    "* 일단 선행되는 두 개의 함수가 각각 O(문자열의길이)가 되고, p의 길이 최대 1,000이다.\n",
+    "* 음.. 사실 재귀라 시간복잡도 계산을 어떻게 해야 할 지 잘 모르겠다..\n",
+    "\n",
+    "#### 해설 본 후\n",
+    "* 답지에선 선행되는 두 함수를 그냥 count를 더했다 뺐다 하면서 구했다. 이렇게도 할 수 있구나.\n",
+    "* 이전 풀이에서는 조건을 이용하여('('의 개수와 ')'의 개수가 같다는 것 이용) u가 '('로 시작하면 무조건 올바른 괄호 문자열일 수밖에 없다는 점을 이용함"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# u를 균형잡힌 괄호 문자열로 더 분리할 수 없게 w에서 u와 v를 분리하는 함수 선언\n",
+    "def smallest_balance(w):\n",
+    "    u = ''\n",
+    "    left = 0\n",
+    "    right = 0\n",
+    "    for i in range(len(w)): # 문자열을 돌면서\n",
+    "        if w[i] == '(': # 왼쪽 괄호면 left에 +1\n",
+    "            left += 1\n",
+    "        else: # 오른쪽 괄호면 right에 +1\n",
+    "            right += 1\n",
+    "        \n",
+    "        u += w[i] # 해당 괄호는 u에 우선 추가하고\n",
+    "        \n",
+    "        if left == right: # 왼쪽 오른쪽 개수 같아지면 반복 중지\n",
+    "            break\n",
+    "    v = w[len(u):] # u에 추가된 괄호 뒤의 괄호는 전부 v에 추가\n",
+    "    \n",
+    "    # u, v 리턴\n",
+    "    return u, v\n",
+    "\n",
+    "# 올바른 괄호 문자열인지 체크하는 함수 선언\n",
+    "def isright(w):\n",
+    "    stack = [] # 괄호를 검사할 스택 선언\n",
+    "    for i in w: # 문자열을 돌면서\n",
+    "        if i == '(': # 왼쪽 괄호가 나오면 스택에 추가\n",
+    "            stack.append(i)\n",
+    "        else: # 오른쪽 괄호라면\n",
+    "            try:\n",
+    "                stack.pop() # 스택에서 왼쪽 괄호를 하나 빼고\n",
+    "            except: # 스택에서 뺄 괄호가 없어 에러가 난다면\n",
+    "                return False # False를 리턴\n",
+    "    if stack: # 문자열을 전부 돌았는데 스택에 괄호가 남아있다면\n",
+    "        return False # False를 리턴\n",
+    "    else: # 아니라면\n",
+    "        return True # True 리턴\n",
+    "\n",
+    "def solution(p):\n",
+    "    # 입력이 빈 문자열인 경우, 빈 문자열 반환\n",
+    "    if not p:\n",
+    "        return p\n",
+    "    \n",
+    "    answer = '' # 정답 변수 선언\n",
+    "    \n",
+    "    u, v = smallest_balance(p) # u를 더 나뉘지 않는 균형잡힌 괄호 문자열로 v와 분리하고\n",
+    "    \n",
+    "    if isright(u): # 분리된 u가 올바른 괄호 문자열이라면\n",
+    "        answer += u + solution(v) # u 뒤에 v를 해당 함수로 재귀를 돌리며 추가\n",
+    "    else: # u가 올바른 괄호 문자열이 아니라면\n",
+    "        answer += '(' + solution(v) + ')' + ''.join(['(' if i == ')' else ')' for i in u[1:-1]]) # 조건대로 수행\n",
+    "    \n",
+    "    # 정답을 리턴\n",
+    "    return answer"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 해설 코드 참고"
    ]
   },
   {
@@ -640,6 +834,60 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# \"균형잡힌 괄호 문자열\"의 인덱스 반환\n",
+    "def balanced_index(p):\n",
+    "    count = 0 # 왼쪽 괄호의 개수\n",
+    "    for i in range(len(p)):\n",
+    "        if p[i] == '(':\n",
+    "            count += 1\n",
+    "        else:\n",
+    "            count -= 1\n",
+    "        if count == 0:\n",
+    "            return i\n",
+    "\n",
+    "# \"올바른 괄호 문자열\"인지 판단\n",
+    "def check_proper(p):\n",
+    "    count = 0 # 왼쪽 괄호의 개수\n",
+    "    for i in p:\n",
+    "        if i == '(':\n",
+    "            count += 1\n",
+    "        else:\n",
+    "            if count == 0: # 쌍이 맞지 않는 경우에 False 반환\n",
+    "                return False\n",
+    "            count -= 1\n",
+    "    return True # 쌍이 맞는 경우에 True 반환\n",
+    "\n",
+    "\n",
+    "def solution(p):\n",
+    "    answer = ''\n",
+    "    if p == '':\n",
+    "        return answer\n",
+    "    index = balanced_index(p)\n",
+    "    u = p[:index + 1]\n",
+    "    v = p[index + 1:]\n",
+    "    # \"올바른 괄호 문자열\"이면, v에 대해 함수를 수행한 결과를 붙여 반환\n",
+    "    if check_proper(u):\n",
+    "        answer = u + solution(v)\n",
+    "    # \"올바른 괄호 문자열\"이 아니라면 아래의 과정을 수행\n",
+    "    else:\n",
+    "        answer = '('\n",
+    "        answer += solution(v)\n",
+    "        answer += ')'\n",
+    "        u = list(u[1:-1]) # 첫 번째와 마지막 문자를 제거\n",
+    "        for i in range(len(u)):\n",
+    "            if u[i] == '(':\n",
+    "                u[i] = ')'\n",
+    "            else:\n",
+    "                u[i] = '('\n",
+    "        answer += \"\".join(u)\n",
+    "    return answer"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
