--- a/ch5_dfs_bfs.ipynb
+++ b/ch5_dfs_bfs.ipynb
@@ -888,7 +888,308 @@
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Q19. 연산자 끼워넣기\n",
+    "https://www.acmicpc.net/problem/14888"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 제한\n",
+    "* 풀이 시간 30분\n",
+    "* 시간 제한 2초\n",
+    "* 메모리 제한 512MB\n",
+    "\n",
+    "#### 아이디어\n",
+    "* (예전 기억) 재귀로 연산자 별로 타고타고 들어가면서 계산하면서 값들고 올라오기"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 시간 복잡도\n",
+    "* 재귀함수로 완전탐색을 들어가게 되니까 최소 $_{10}\\mathrm{P}_{10}$ = 3,628,800 번의 연산이 필요\n",
+    "* 여기에 min(), max()할 때 또 O(n)만큼 드니까 *3 하면 10,886,400. 거기에 잡다한 연산들 해도 2초 안엔 가능할 것 같다.\n",
+    "* 어차피 리스트를 만들어 max(), min()을 하니까 이걸 각각 하지 말고, 한 번 반복문을 돌리며 최댓값, 최솟값을 갱신해서 마지막에 출력하는 게 시간 면에서 더 이득이었을 것 같다.\n",
+    "\n",
+    "#### 해설 본 후\n",
+    "* 해설에선 itertools의 product를 이용할 수도 있다고 하는데, 각 연산자의 개수는 정해져 있는데 어떻게 product를 활용해야 할 지 모르겠다. 이전 풀이에서는 연산자를 쭉 나열한 리스트에 permutations를 써서 모든 경우의 수를 구했다. pypy3에선 통과되고, python3에선 시간초과가 났었다.\n",
+    "* 해설처럼 인덱스와 현재까지의 값을 재귀함수의 매개변수로 받으면 더 간단히 코드를 짤 수 있다. 연산자 세는 것도 따로 자료형 안 만들고 그냥 받아올 때 변수들로 받아와서 global로 뺐다 더했다 하면 간단하다. 최종값도 그냥 최댓값 변수, 최솟값 변수 만들어 준 다음 연산자를 모두 사용했을 때 업데이트해주는 식으로 간단히 만들 수 있다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "54\n",
+      "-24\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 조건에 따른 나눗셈 함수 선언\n",
+    "def div(a, b):\n",
+    "    if a < 0:\n",
+    "        return -(abs(a) // b)\n",
+    "    else:\n",
+    "        return a // b\n",
+    "    \n",
+    "# 수 개수 N 입력\n",
+    "N = int(input())\n",
+    "\n",
+    "# 수 정보 입력\n",
+    "num_array = list(map(int, input().split()))\n",
+    "\n",
+    "# 연산자 개수 정보 입력(덧셈 뺄셈 곱셈 나눗셈)\n",
+    "oper_num_array = list(map(int, input().split()))\n",
+    "\n",
+    "total = num_array[0] # 연산자를 모두 넣어 계산한 식의 값을 받을 변수 선언(시작은 주어진 숫자의 첫 값으로)\n",
+    "count_oper_num = [0, 0, 0, 0] # 각각의 연산자 수를 세기 위한 리스트 선언\n",
+    "cand = [] # 연산자를 모두 넣어 계산한 식의 값을 모두 저장할 리스트 선언\n",
+    "\n",
+    "# 연산자의 조합을 모두 계산할 재귀함수 선언\n",
+    "def recursive_operation():\n",
+    "    global total # 전역 변수인 total을 끌고 와서\n",
+    "    \n",
+    "    # 사용한 연산자 개수가 N-1개가 되면\n",
+    "    if sum(count_oper_num) == N-1:\n",
+    "        cand.append(total) # 식이 완성된 것이므로 최종값을 cand에 추가하고\n",
+    "        return # 함수를 끝냄\n",
+    "    \n",
+    "    # 네 가지 연산자에 대해 같은 처리를 할 것임\n",
+    "    # 1. 해당 연산자의 사용 횟수가 요구 기준보다 적다면\n",
+    "    # 2. 해당 연산자의 사용 횟수를 1 늘리고\n",
+    "    # 3. 현재까지의 총 값을 last_total 변수에 저장해두고\n",
+    "    # 4. 총 값과 다음 값에 해당 연산자를 통해 연산을 진행하고\n",
+    "    # 5. 재귀 함수를 실행\n",
+    "    # 6. 해당 연산자의 사용 횟수를 1 줄이고 (해당 연산자를 넘어가고 다음 연산자를 채택하는 경우를 체크하기 위해)\n",
+    "    # 7. 총 값을 last_total에 저장한 값으로 되돌림 (해당 연산자를 넘어가고 다음 연산자를 채택하는 경우를 체크하기 위해)\n",
+    "    \n",
+    "    # 더하기\n",
+    "    if count_oper_num[0] < oper_num_array[0]:\n",
+    "        count_oper_num[0] += 1\n",
+    "        last_total = total\n",
+    "        total += num_array[sum(count_oper_num)]\n",
+    "        recursive_operation()\n",
+    "        count_oper_num[0] -= 1\n",
+    "        total = last_total\n",
+    "        \n",
+    "    # 빼기\n",
+    "    if count_oper_num[1] < oper_num_array[1]:\n",
+    "        count_oper_num[1] += 1\n",
+    "        last_total = total\n",
+    "        total -= num_array[sum(count_oper_num)]\n",
+    "        recursive_operation()\n",
+    "        count_oper_num[1] -= 1\n",
+    "        total = last_total      \n",
+    "    \n",
+    "    # 곱하기\n",
+    "    if count_oper_num[2] < oper_num_array[2]:\n",
+    "        count_oper_num[2] += 1\n",
+    "        last_total = total\n",
+    "        total *= num_array[sum(count_oper_num)]\n",
+    "        recursive_operation()\n",
+    "        count_oper_num[2] -= 1\n",
+    "        total = last_total\n",
+    "\n",
+    "    # 나누기\n",
+    "    if count_oper_num[3] < oper_num_array[3]:\n",
+    "        count_oper_num[3] += 1\n",
+    "        last_total = total\n",
+    "        total = div(total, num_array[sum(count_oper_num)])\n",
+    "        recursive_operation()\n",
+    "        count_oper_num[3] -= 1\n",
+    "        total = last_total\n",
+    "\n",
+    "# 재귀 함수 실행        \n",
+    "recursive_operation()\n",
+    "\n",
+    "# 최댓값과 최솟값 출력\n",
+    "print(max(cand))\n",
+    "print(min(cand))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 해설 코드 참고"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = int(input())\n",
+    "# 연산을 수행하고자 하는 수 리스트\n",
+    "data = list(map(int, input().split()))\n",
+    "# 더하기, 빼기, 곱하기, 나누기 연산자 개수\n",
+    "add, sub, mul, div = map(int, input().split())\n",
+    "\n",
+    "# 최솟값과 최댓값 초기화\n",
+    "min_value = 1e9\n",
+    "max_value = -1e9\n",
+    "\n",
+    "# 깊이 우선 탐색(DFS) 메서드\n",
+    "def dfs(i, now):\n",
+    "    global min_value, max_value, add, sub, mul, div\n",
+    "    # 모든 연산자를 다 사용한 경우, 최댓값과 최솟값 업데이트\n",
+    "    if i == n:\n",
+    "        min_value = min(min_value, now)\n",
+    "        max_value = max(max_value, now)\n",
+    "        \n",
+    "    else:\n",
+    "        # 각 연산자에 대하여 재귀적으로 수행\n",
+    "        if add > 0:\n",
+    "            add -= 1\n",
+    "            dfs(i + 1, now + data[i])\n",
+    "            add += 1\n",
+    "        if sub > 0:\n",
+    "            sub -= 1\n",
+    "            dfs(i + 1, now - data[i])\n",
+    "            sub += 1\n",
+    "        if mul > 0:\n",
+    "            mul -= 1\n",
+    "            dfs(i + 1, now * data[i])\n",
+    "            mul += 1\n",
+    "        if div > 0:\n",
+    "            div -= 1\n",
+    "            dfs(i + 1, int(now / data[i])) # 나눌 때는 나머지를 제거\n",
+    "            div += 1\n",
+    "\n",
+    "# DFS 메서드 호출\n",
+    "dfs(1, data[0])\n",
+    "\n",
+    "# 최댓값과 최솟값 차롇로 출력\n",
+    "print(max_value)\n",
+    "print(min_value)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q20. 감시 피하기\n",
+    "https://www.acmicpc.net/problem/18428"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 제한\n",
+    "* 풀이 시간 60분\n",
+    "* 시간 제한 2초\n",
+    "* 메모리 제한 256MB\n",
+    "\n",
+    "#### 아이디어\n",
+    "* 맵이 그렇게 크지 않으므로 3개 장애물 세우는 모든 경우의 수를 체크하는 완전탐색으로 풀자\n",
+    "* combinations 이용하고, bfs 활용해보자\n",
+    "* 장애물 세우려면 빈 칸 좌표 정보 필요하고, bfs 시작하려면 선생님 칸 좌표 정보 필요 => 리스트로 만들어두자\n",
+    "* 일반적인 bfs는 안 되고, 한 방향으로만 쭉 가는 형태로 탐색해야 한다."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 시간 복잡도\n",
+    "* N=6이고, 빈 칸 중 3개를 뽑으므로 장애물을 세우는 경우의 수는 대략 최대 $_{36}\\mathrm{C}_{3}$ = 7140 개\n",
+    "* 선생님은 최대 5명, 한 선생님이 감시하는 최대 칸 수는 10칸(크기가 6x6인 경우, 4방위로만 감시 가능하므로)\n",
+    "* 7140 * 36 * 50 = 12,852,000 정도의 연산이 필요할 것으로 예상 => 2초 안에 해결 가능\n",
+    "\n",
+    "#### 해설 본 후\n",
+    "* 해설에서는 deepcopy를 쓰지 않고, 단순히 반복문을 두 번 활용하여 'O'로 바꿨다가 다시 'X'로 바꾸는데, 이게 더 빠른가? 일단 공간 복잡도 면에선 이득이 맞다. => 백준에서 해보니 deepcopy 쓰는 것보다 반복문 한 번 더 쓰는 게 훨씬 빠르다. => deepcopy는 실행 시간이 느린 편이라고 한다. 정 복사를 해야겠다면 차라리 슬라이싱을 쓰는 게 이득일 듯 하다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NO\n"
+     ]
+    }
+   ],
+   "source": [
+    "from itertools import combinations\n",
+    "from copy import deepcopy\n",
+    "\n",
+    "# 복도 크기 N 입력\n",
+    "N = int(input())\n",
+    "\n",
+    "# 복도 정보 입력\n",
+    "aisle = []\n",
+    "empty = [] # 빈 칸 좌표 받을 리스트 선언\n",
+    "teachers = [] # 선생님 칸 좌표 받을 리스트 선언\n",
+    "for x in range(N): # 복도 정보 한 줄 씩 받아와서\n",
+    "    data = input().split()\n",
+    "    aisle.append(data) # 복도 정보에 넣고\n",
+    "    for y in range(N): # 한 줄을 확인하며\n",
+    "        if data[y] == 'X': # 'X' 면 해당 좌표를 empty에 추가\n",
+    "            empty.append((x, y))\n",
+    "        elif data[y] == 'T': # 'T'면 해당 좌표를 teachers에 추가\n",
+    "            teachers.append((x, y))\n",
+    "\n",
+    "# 감시 방향 (상 하 좌 우)\n",
+    "dx = [-1, 1, 0, 0]\n",
+    "dy = [0, 0, -1, 1]\n",
+    "\n",
+    "# 학생을 적발하는 함수 선언\n",
+    "def uncover_student(aisle, teachers):\n",
+    "    for x, y in teachers: # 선생님들 좌표를 돌면서\n",
+    "        for i in range(4): # 네 방향 확인\n",
+    "            nx = x + dx[i]\n",
+    "            ny = y + dy[i]\n",
+    "            \n",
+    "            # 복도를 벗어나지 않고, 장애물을 마주치지 않는 동안 반복\n",
+    "            while 0<=nx<N and 0<=ny<N and aisle[nx][ny] != 'O':\n",
+    "                if aisle[nx][ny] == 'S': # 학생을 발견하면\n",
+    "                    return True # True 리턴\n",
+    "                \n",
+    "                # 발견하지 못했다면 해당 방향으로 한 칸 더 나아간 좌표로 위치 갱신\n",
+    "                nx += dx[i]\n",
+    "                ny += dy[i]\n",
+    "                \n",
+    "    # 네 방향을 쭉 살펴봤지만 학생을 발견하지 못한다면 False 리턴\n",
+    "    return False\n",
+    "\n",
+    "cond = False # 학생들이 들키지 않을 수 있는지 나타내는 변수 선언\n",
+    "for comb in combinations(empty, 3): # 빈 칸 중에서 장애물을 세울 3가지 칸을 고르는 모든 조합을 돌면서\n",
+    "    temp_aisle = deepcopy(aisle) # 본래 복도 정보를 임시 복도 정보에 받아와\n",
+    "    for x, y in comb: # 임시 복도의 해당 세 칸 좌표에 장애물 설치\n",
+    "        temp_aisle[x][y] = 'O'\n",
+    "    \n",
+    "    # 장애물 설치한 임시 복도에서 학생들을 적발할 때, 적발하지 못했다면\n",
+    "    if not uncover_student(temp_aisle, teachers):\n",
+    "        cond = True # 학생들은 들키지 않은 것으로 갱신하고\n",
+    "        break # 반복 멈춤\n",
+    "\n",
+    "if cond: # 학생들이 들키지 않은 경우가 발견되어 반복을 멈췄으면 'YES' 출력\n",
+    "    print('YES')\n",
+    "else: # 모든 경우를 돌았으나 학생들이 들키지 않은 경우가 없어 cond가 True로 갱신되지 않았으면 'NO' 출력\n",
+    "    print('NO')"
+   ]
   }
  ],
  "metadata": {
