--- a/ch5_dfs_bfs.ipynb
+++ b/ch5_dfs_bfs.ipynb
@@ -1190,6 +1190,249 @@
     "else: # 모든 경우를 돌았으나 학생들이 들키지 않은 경우가 없어 cond가 True로 갱신되지 않았으면 'NO' 출력\n",
     "    print('NO')"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q21. 인구 이동 // RE(풀이 시간 초과)\n",
+    "https://www.acmicpc.net/problem/16234"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 제한\n",
+    "* 풀이 시간 40분\n",
+    "* 시간 제한 2초\n",
+    "* 메모리 제한 512MB\n",
+    "\n",
+    "#### 아이디어\n",
+    "* 두 나라의 인구 차이가 L 이상, R 이하인지 확인하는 함수 필요\n",
+    "* 모든 지점에서 사방으로 DFS 통해 연합 형성하고, 연합에 해당하는 나라들을 담은 리스트를 만들어 인구 재분배하기"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 시간 복잡도\n",
+    "* \n",
+    "\n",
+    "#### 해설 본 후\n",
+    "* "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "sys.setrecursionlimit(10**6)\n",
+    "\n",
+    "# 땅의 크기 N, 인구 차이 기준 값 L, R 입력\n",
+    "N, L, R = map(int, input().split())\n",
+    "\n",
+    "# 각 나라의 인구 수 정보 입력\n",
+    "population = []\n",
+    "for _ in range(N):\n",
+    "    population.append(list(map(int, input().split())))\n",
+    "    \n",
+    "# 상 하 좌 우 확인 위한 변수 선언\n",
+    "dx = [-1, 1, 0, 0]\n",
+    "dy = [0, 0, -1, 1]\n",
+    "\n",
+    "# 인구 이동 시 해당 나라를 확인했는지 여부를 담는 리스트 선언\n",
+    "checked = [[False] * N for _ in range(N)]\n",
+    "\n",
+    "# 연합에 속한 나라를 담을 리스트와 연합에 속한 나라의 총 인구를 담을 변수 선언\n",
+    "alliance = []\n",
+    "alliance_population = 0\n",
+    "\n",
+    "# 인구 차이 비교하여 국경을 열지 말지 결정하는 함수 선언\n",
+    "def can_open(x1, y1, x2, y2):\n",
+    "    if L <= abs(population[x1][y1] - population[x2][y2]) <= R:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "    \n",
+    "# 한 나라를 기점으로 열 수 있는 모든 국경을 열기 위한(해당 나라 기점으로 하는 연합을 찾기 위한) DFS 함수 선언\n",
+    "def unite(x, y):\n",
+    "    global alliance_population\n",
+    "    \n",
+    "    for i in range(4):\n",
+    "        nx = x + dx[i]\n",
+    "        ny = y + dy[i]\n",
+    "        \n",
+    "        if nx < 0 or nx >= N or ny < 0 or ny >= N or checked[nx][ny]:\n",
+    "            continue\n",
+    "        \n",
+    "        if can_open(x, y, nx, ny):\n",
+    "            alliance.append((nx, ny))\n",
+    "            alliance_population += population[nx][ny]\n",
+    "            checked[nx][ny] = True\n",
+    "            unite(nx, ny)\n",
+    "    return\n",
+    "\n",
+    "days = 0\n",
+    "while True:\n",
+    "    is_any_alliance = False\n",
+    "    for x in range(N):\n",
+    "        for y in range(N):\n",
+    "            if not checked[x][y]:\n",
+    "                ## 주석처리 한 부분이 있으면 is_any_alliance가 항상 True가 돼버린다. 첫 값 갱신을 안 해줘도 dfs 과정에서 갱신되니까 빼도 괜찮다.\n",
+    "                # alliance.append((x, y)) \n",
+    "                # alliance_population += population[x][y]\n",
+    "                # checked[x][y] = True\n",
+    "                unite(x, y)\n",
+    "                if alliance:\n",
+    "                    is_any_alliance = True\n",
+    "                \n",
+    "                    revised_population = alliance_population // len(alliance)\n",
+    "                    for i, j in alliance:\n",
+    "                        population[i][j] = revised_population\n",
+    "                    alliance = []\n",
+    "                    alliance_population = 0\n",
+    "    \n",
+    "    if not is_any_alliance:\n",
+    "        break\n",
+    "\n",
+    "    checked = [[False] * N for _ in range(N)]\n",
+    "    days += 1\n",
+    "\n",
+    "print(days)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 해설 코드 참고"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import deque\n",
+    "\n",
+    "# 땅의 크기(N), L, R 값 입력\n",
+    "n, l, r = map(int, input().split())\n",
+    "\n",
+    "# 전체 나라의 정보 (N x N) 입력\n",
+    "graph = []\n",
+    "for _ in range(n):\n",
+    "    graph.append(list(map(int, input().split())))\n",
+    "    \n",
+    "dx = [-1, 0, 1, 0]\n",
+    "dy = [0, -1, 0, 1]\n",
+    "\n",
+    "result = 0\n",
+    "\n",
+    "# 특정 위치에서 출발하여 모든 연합을 체크한 뒤에 데이터 갱신\n",
+    "def process(x, y, index):\n",
+    "    # (x, y)의 위치와 연결된 나라(연합) 정보를 담는 리스트\n",
+    "    united = []\n",
+    "    united.append((x, y))\n",
+    "    # 너비 우선 탐색(BFS)을 위한 큐 정의\n",
+    "    q = deque()\n",
+    "    q.append((x, y))\n",
+    "    union[x][y] = index # 현재 연합의 번호 할당\n",
+    "    summary = graph[x][y] # 현재 연합의 전체 인구 수\n",
+    "    count = 1 # 현재 연합의 국가 수\n",
+    "    # 큐가 빌 때까지 반복(BFS)\n",
+    "    while q:\n",
+    "        x, y = q.popleft()\n",
+    "        # 현재 위치에서 4가지 방향을 확인하며\n",
+    "        for i in range(4):\n",
+    "            nx = x + dx[i]\n",
+    "            ny = y + dy[i]\n",
+    "            # 바로 옆에 있는 나라를 확인하며\n",
+    "            if 0 <= nx < n and 0 <= ny < n and union[nx][ny] == -1:\n",
+    "                # 옆에 있는 나라와 인구 차이가 L명 이상, R명 이하라면\n",
+    "                if l <= abs(graph[nx][ny] - graph[x][y]) <= r:\n",
+    "                    q.append((nx, ny))\n",
+    "                    # 연합에 추가\n",
+    "                    union[nx][ny] = index\n",
+    "                    summary += graph[nx][ny]\n",
+    "                    count += 1\n",
+    "                    united.append((nx, ny))\n",
+    "    # 연합 국가끼리 인구를 분배\n",
+    "    for i, j in united:\n",
+    "        graph[i][j] = summary // count\n",
+    "    return count\n",
+    "\n",
+    "total_count = 0\n",
+    "\n",
+    "# 더 이상 인구 이동을 할 수 없을 때까지 반복\n",
+    "while True:\n",
+    "    union = [[-1] * n for _ in range(n)]\n",
+    "    index = 0\n",
+    "    for i in range(n):\n",
+    "        for j in range(n):\n",
+    "            if union[i][j] == -1: # 해당 나라가 아직 처리되지 않았다면\n",
+    "                process(i, j, index)\n",
+    "                index += 1\n",
+    "    # 모든 인구 이동이 끝난 경우\n",
+    "    if index == n * n:\n",
+    "        break\n",
+    "    total_count += 1\n",
+    "\n",
+    "# 인구 이동 횟수 출력\n",
+    "print(total_count)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q22. 블록 이동하기\n",
+    "https://school.programmers.co.kr/learn/courses/30/lessons/60063\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 제한\n",
+    "* 풀이 시간 50분\n",
+    "* 시간 제한 1초\n",
+    "* 메모리 제한 128MB\n",
+    "\n",
+    "#### 아이디어\n",
+    "* "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 시간 복잡도\n",
+    "* \n",
+    "\n",
+    "#### 해설 본 후\n",
+    "* "
+   ]
   }
  ],
  "metadata": {
