--- a/ch5_dfs_bfs.ipynb
+++ b/ch5_dfs_bfs.ipynb
@@ -698,6 +698,7 @@
     "    x, y, v, t = q.popleft() # x, y, 바이러스 종류, 경과한 시간\n",
     "    \n",
     "    if t == S: # 경과한 시간이 S초라면\n",
+    "        ## 이 조건에서 출력하지 않고 반복 중지만 한다면 어차피 반복문이 끝난 뒤에 정답을 출력하게 할 수 있으므로 플래그 변수도 필요없어짐\n",
     "        print(tube[X-1][Y-1]) # 해당 위치의 바이러스 정보를 출력하고\n",
     "        already_full = False # 시험관이 차지 않았으므로 False로 재할당\n",
     "        break # 반복 중지\n",
@@ -1212,7 +1213,8 @@
     "\n",
     "#### 아이디어\n",
     "* 두 나라의 인구 차이가 L 이상, R 이하인지 확인하는 함수 필요\n",
-    "* 모든 지점에서 사방으로 DFS 통해 연합 형성하고, 연합에 해당하는 나라들을 담은 리스트를 만들어 인구 재분배하기"
+    "* 모든 지점에서 사방으로 DFS 통해 연합 형성하고, 연합에 해당하는 나라들을 담은 리스트를 만들어 인구 재분배하기\n",
+    "* 그냥 dfs를 돌리면 재귀 깊이 제한에 걸려 sys.setrecursionlimit()을 통해 제한을 더 큰 수로 풀어줘야 한다"
    ]
   },
   {
@@ -1221,10 +1223,16 @@
    "metadata": {},
    "source": [
     "#### 시간 복잡도\n",
-    "* \n",
+    "* dfs가 O(V+E)니까 문제 조건 상 노드 개수 N^2, 간선 개수 (N^2)*4 로 대충 O(N * 2)이고, N은 최대 50.\n",
+    "* 연합된 나라들에서 반복문을 한 번 더 도니까 최악의 경우 다시 O(N^2)이므로 총 O(N^4) 정도가 되려나?\n",
+    "* 50^4 = 6,250,000이므로 이것저것 추가 되어도 2초 안에는 해결이 가능할 것 같다\n",
+    "\n",
     "\n",
     "#### 해설 본 후\n",
-    "* "
+    "* 답지에선 bfs 사용\n",
+    "* 연합의 개수를 세어 종료 조건을 만족시키는 부분이 씽크빅인것 같다.\n",
+    "* 이전 풀이에서는 일수(days) 체크 방식을 deepcopy를 사용하여 맵 전체를 저장해두고, 인구 이동을 진행한 뒤에 저장해두었던 맵과 변화된 맵을 비교해서 둘이 같다면(인구 이동이 없었다면) 반복을 멈추게 하는 식으로 해결했었다. 공간 복잡도 면에서 꽤나 비효율적이었을 것 같다.\n",
+    "* 이전 풀이가 함수는 더 깔끔하게 짰던 것 같다."
    ]
   },
   {
@@ -1274,45 +1282,128 @@
     "def unite(x, y):\n",
     "    global alliance_population\n",
     "    \n",
+    "    # 네 방향을 모두 확인하며\n",
     "    for i in range(4):\n",
     "        nx = x + dx[i]\n",
     "        ny = y + dy[i]\n",
     "        \n",
+    "        # 좌표가 땅을 벗어나거나, 이미 체크한 나라라면 무시\n",
     "        if nx < 0 or nx >= N or ny < 0 or ny >= N or checked[nx][ny]:\n",
     "            continue\n",
     "        \n",
+    "        # 위의 조건에 걸리지 않고, 국경을 여는 조건에 부합한다면\n",
     "        if can_open(x, y, nx, ny):\n",
-    "            alliance.append((nx, ny))\n",
-    "            alliance_population += population[nx][ny]\n",
-    "            checked[nx][ny] = True\n",
-    "            unite(nx, ny)\n",
+    "            alliance.append((nx, ny)) # 해당 나라 좌표를 연합에 추가하고\n",
+    "            alliance_population += population[nx][ny] # 연합 총 인구수에 해당 나라 인구 수를 더하고\n",
+    "            checked[nx][ny] = True # 체크한 나라임을 표시하고\n",
+    "            unite(nx, ny) # 해당 나라를 기점으로 재귀적으로 함수 실행\n",
     "    return\n",
     "\n",
-    "days = 0\n",
-    "while True:\n",
-    "    is_any_alliance = False\n",
+    "days = 0 # 인구 이동이 발생한 일수를 담는 변수 선언\n",
+    "while True: # 무한 루프를 돌면서\n",
+    "    is_any_alliance = False # 연합이 하나라도 있는지 확인하기 위한 플래그 변수 선언\n",
+    "    # 모든 나라를 돌면서\n",
     "    for x in range(N):\n",
     "        for y in range(N):\n",
+    "            # 해당 나라의 연합 소속 여부가 확인되지 않았다면\n",
     "            if not checked[x][y]:\n",
-    "                ## 주석처리 한 부분이 있으면 is_any_alliance가 항상 True가 돼버린다. 첫 값 갱신을 안 해줘도 dfs 과정에서 갱신되니까 빼도 괜찮다.\n",
+    "                \n",
+    "                ## 주석처리 한 부분이 있으면 첫 값이 연합에 무조건 들어가게 되어 flag 변수인 is_any_alliance가 항상 True가 돼버린다.\n",
+    "                ## 첫 값을 처음에 연합에 추가 안 해줘도 dfs 과정에서 어차피 추가되게 되므로 빼도 괜찮다.\n",
     "                # alliance.append((x, y)) \n",
     "                # alliance_population += population[x][y]\n",
     "                # checked[x][y] = True\n",
-    "                unite(x, y)\n",
-    "                if alliance:\n",
-    "                    is_any_alliance = True\n",
     "                \n",
-    "                    revised_population = alliance_population // len(alliance)\n",
-    "                    for i, j in alliance:\n",
+    "                unite(x, y) # 해당 나라를 기점으로 연합을 형성하기 위한 dfs 함수 실행\n",
+    "\n",
+    "                # 모든 나라를 확인하는 동안 연합이 하나라도 발생한다면\n",
+    "                if alliance:\n",
+    "                    is_any_alliance = True # 플래그 변수를 True로 갱신\n",
+    "                \n",
+    "                    ## DFS로 연합을 탐색하므로 한 나라를 기점으로 그 나라와 연합이 가능한 모든 나라를 재귀를 돌며 한 번에 체크하게 됨\n",
+    "                    ## 그러므로 한 나라를 체크할 때마다 연합이 생성되고, 해당 연합에서 인구 이동을 실시하여 인구 수를 조건에 맞춰줌\n",
+    "                    ## 이 때, 아직 checked 리스트는 초기화하지 않음으로써, 이미 해당 날짜에 인구 이동이 일어났던 나라들은 다시 체크하지 않게 함\n",
+    "                    \n",
+    "                    revised_population = alliance_population // len(alliance) # 인구 이동 후 각 나라의 인구 계산\n",
+    "                    for i, j in alliance: # 연합에 있는 나라들의 인구 수를 갱신\n",
     "                        population[i][j] = revised_population\n",
+    "                        \n",
+    "                    # 연합 리스트와 연합의 총 인구수를 초기화\n",
     "                    alliance = []\n",
     "                    alliance_population = 0\n",
     "    \n",
+    "    # 연합 유무를 확인하는 플래그 변수가 False라면(연합이 하나도 발생하지 않았다면) 인구 이동이 더 이루어지지 않으므로 반복 종료\n",
     "    if not is_any_alliance:\n",
     "        break\n",
     "\n",
+    "    # 모든 나라의 연합 여부를 확인하여 인구 이동이 종료됐다면 일수에 하루를 추가하고, checked 리스트를 초기화\n",
     "    checked = [[False] * N for _ in range(N)]\n",
     "    days += 1\n",
+    "\n",
+    "# 인구 이동이 총 며칠간 일어났는지 출력\n",
+    "print(days)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 이전 풀이 참고"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "\n",
+    "sys.setrecursionlimit(10**6)\n",
+    "\n",
+    "# 입력\n",
+    "N, L, R = map(int, input().split())\n",
+    "A  = []\n",
+    "for _ in range(N):\n",
+    "  A.append(list(map(int, input().split())))\n",
+    "\n",
+    "# 상하좌우\n",
+    "dx = [-1, 1, 0, 0]\n",
+    "dy = [0, 0, -1, 1]\n",
+    "\n",
+    "def dfs(x, y, unions):\n",
+    "  visited[x][y] = True\n",
+    "  unions.append(((x,y), A[x][y]))\n",
+    "  for i in range(4):\n",
+    "    nx = x + dx[i]\n",
+    "    ny = y + dy[i]\n",
+    "    if nx < 0 or nx >= N or ny < 0 or ny >= N or visited[nx][ny] == True:\n",
+    "      continue\n",
+    "    if L <= abs(A[x][y] - A[nx][ny]) <= R:\n",
+    "      unions.append(((nx,ny), A[nx][ny]))\n",
+    "      dfs(nx, ny, unions)\n",
+    "  return sorted(list(set(unions))) if len(unions) > 1 else []\n",
+    "\n",
+    "from copy import deepcopy\n",
+    "\n",
+    "days = 0\n",
+    "while True:\n",
+    "  preA = deepcopy(A)\n",
+    "  unions_list = []\n",
+    "  visited = [[False for _ in range(N)] for _ in range(N)]\n",
+    "  for i in range(N):\n",
+    "    for j in range(N):\n",
+    "      unions_list.append(dfs(i, j, []))\n",
+    "\n",
+    "  for unions in unions_list:\n",
+    "    if unions != []:\n",
+    "      total_population = int(sum([i[1] for i in unions]) / len(unions))\n",
+    "      for city, population in unions:\n",
+    "        A[city[0]][city[1]] = total_population\n",
+    "  if preA == A:\n",
+    "    break\n",
+    "  days += 1\n",
     "\n",
     "print(days)"
    ]
@@ -1391,7 +1482,7 @@
     "                process(i, j, index)\n",
     "                index += 1\n",
     "    # 모든 인구 이동이 끝난 경우\n",
-    "    if index == n * n:\n",
+    "    if index == n * n: ## 연합 번호 수가 전체 땅의 크기와 같아졌다 == 각각의 모든 나라가 자기 자신만 연합으로 한다 == 인구이동이 끝났다\n",
     "        break\n",
     "    total_count += 1\n",
     "\n",
@@ -1404,8 +1495,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Q22. 블록 이동하기\n",
-    "https://school.programmers.co.kr/learn/courses/30/lessons/60063\n"
+    "## Q22. 블록 이동하기 // RE(풀이 시간 초과)\n",
+    "https://school.programmers.co.kr/learn/courses/30/lessons/60063\n",
+    "* 117분\n"
    ]
   },
   {
@@ -1419,7 +1511,12 @@
     "* 메모리 제한 128MB\n",
     "\n",
     "#### 아이디어\n",
-    "* "
+    "* 회전 함수 만들기\n",
+    "* 기본 bfs를 조건에 맞게 잘 튜닝해야 한다. => 해당 좌표에서 1초 내에 이동 가능한 모든 좌표를 담는 리스트를 리턴하는 함수를 만들어 이를 bfs의 기준으로 사용하자\n",
+    "* (기억의 저편) visted는 좌표의 set을 담는 식으로 만들면 수월하다고 했던 것 같다.\n",
+    "\n",
+    "#### 참고\n",
+    "* list.extend()를 써야하는데 set.update()랑 헷갈려서 찾아봄"
    ]
   },
   {
@@ -1428,10 +1525,97 @@
    "metadata": {},
    "source": [
     "#### 시간 복잡도\n",
-    "* \n",
+    "* 로봇의 위치가 가로든 세로든 한 라인에 n-1 의 경우의 수가 나오고, 이동할 수 있는 경우가 12가지. 대충 N * N * 12.\n",
+    "* 근데 in 연산자 사용해서 visited를 체크하니까 최악의 경우 로봇 위치 개수만큼 더 곱해야할 거고, 그럼 대략 O(N^4)이 되려나?\n",
+    "* N의 최댓값이 100이므로 N^4는 1억. 최악의 경우에도 어찌저찌 1초 안에는 돌아갈 것 같다.\n",
     "\n",
     "#### 해설 본 후\n",
-    "* "
+    "* 답지에선 q에 들어가는 원소 정보를 아예 (set, 값)의 형태로 넣어 좀 더 부드럽게(?) 구현했다.\n",
+    "* board에 벽을 두를 때 굳이 1을 어디 붙이고 그걸 생각하지 말고 그냥 n+2의 크기를 가진 1로 가득찬 이중 리스트를 만들고 거기에 (1,1) 좌표부터 기존의 벽을 넣어주면 쉽게 구성할 수 있다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import deque\n",
+    "\n",
+    "def can_move(board, robot_pos):\n",
+    "    pos1, pos2 = sorted(robot_pos)\n",
+    "    can_move_list = []\n",
+    "    \n",
+    "    # 이동(상 하 좌 우)\n",
+    "    dx = [-1, 1, 0, 0]\n",
+    "    dy = [0, 0, -1, 1]\n",
+    "    \n",
+    "    for i in range(4):\n",
+    "        n_pos1, n_pos2 = (pos1[0] + dx[i], pos1[1] + dy[i]), (pos2[0] + dx[i], pos2[1] + dy[i]) \n",
+    "        \n",
+    "        if board[n_pos1[0]][n_pos1[1]] == 0 and board[n_pos2[0]][n_pos2[1]] == 0:\n",
+    "            can_move_list.append([n_pos1, n_pos2])\n",
+    "            \n",
+    "    # 회전\n",
+    "    # 가로인 경우\n",
+    "    if pos1[0] - pos2[0] == 0:\n",
+    "        # 아래 칸으로 회전\n",
+    "        if board[pos1[0]+1][pos1[1]] == 0 and board[pos2[0]+1][pos2[1]] == 0:\n",
+    "            can_move_list.extend([[(pos1[0], pos1[1]), (pos2[0]+1, pos2[1]-1)], [(pos1[0]+1, pos1[1]+1), (pos2[0], pos2[1])]])\n",
+    "        # 위 칸으로 회전\n",
+    "        if board[pos1[0]-1][pos1[1]] == 0 and board[pos2[0]-1][pos2[1]] == 0:\n",
+    "            can_move_list.extend([[(pos1[0], pos1[1]), (pos2[0]-1, pos2[1]-1)], [(pos1[0]-1, pos1[1]+1), (pos2[0], pos2[1])]])\n",
+    "    # 세로인 경우\n",
+    "    else:\n",
+    "        # 왼 칸으로 회전\n",
+    "        if board[pos1[0]][pos1[1]-1] == 0 and board[pos2[0]][pos2[1]-1] == 0:\n",
+    "            can_move_list.extend([[(pos1[0], pos1[1]), (pos2[0]-1, pos2[1]-1)], [(pos1[0]+1, pos1[1]-1), (pos2[0], pos2[1])]])\n",
+    "        # 오른 칸으로 회전\n",
+    "        if board[pos1[0]][pos1[1]+1] == 0 and board[pos2[0]][pos2[1]+1] == 0:\n",
+    "            can_move_list.extend([[(pos1[0], pos1[1]), (pos2[0]-1, pos2[1]+1)], [(pos1[0]+1, pos1[1]+1), (pos2[0], pos2[1])]])\n",
+    "\n",
+    "    return can_move_list\n",
+    "\n",
+    "\n",
+    "def solution(board):\n",
+    "    # 지도 크기를 변수로 받음\n",
+    "    n = len(board)\n",
+    "    \n",
+    "    # 지도를 둘러싸는 벽을 생성(인덱싱과 bfs 조건을 편하게 사용하기 위함)\n",
+    "    board = [[1]*(n+2)] + [[1] + row + [1] for row in board] + [[1]*(n+2)]\n",
+    "    \n",
+    "    robot_pos = [(1, 1), (1, 2), 0] # [pos1, pos2, 이동 횟수]\n",
+    "    visited = [] # 좌표 넣을 때 set으로 넣기\n",
+    "    \n",
+    "    q = deque()\n",
+    "    q.append(robot_pos)\n",
+    "    visited.append(set([(1, 1), (1, 2)]))\n",
+    "        \n",
+    "    while q:\n",
+    "        pos1, pos2, moving = q.popleft()\n",
+    "        \n",
+    "        if pos1 == (n, n) or pos2 == (n, n):\n",
+    "            return moving\n",
+    "           \n",
+    "        for n_pos in can_move(board, [pos1, pos2]):\n",
+    "            n_pos_set = set(n_pos)\n",
+    "            if n_pos_set not in visited:\n",
+    "                q.append(n_pos + [moving + 1])\n",
+    "                visited.append(n_pos_set)\n",
+    "                \n",
+    "\n",
+    "solution([[0, 0, 0, 1, 1],[0, 0, 0, 1, 0],[0, 1, 0, 1, 1],[1, 1, 0, 0, 1],[0, 0, 0, 0, 0]])"
    ]
   }
  ],
