add explanations for Q22 & update readme & ch6 exercise

--- a/ch5_dfs_bfs.ipynb
+++ b/ch5_dfs_bfs.ipynb
@@ -1527,7 +1527,7 @@
     "#### 시간 복잡도\n",
     "* 로봇의 위치가 가로든 세로든 한 라인에 n-1 의 경우의 수가 나오고, 이동할 수 있는 경우가 12가지. 대충 N * N * 12.\n",
     "* 근데 in 연산자 사용해서 visited를 체크하니까 최악의 경우 로봇 위치 개수만큼 더 곱해야할 거고, 그럼 대략 O(N^4)이 되려나?\n",
-    "* N의 최댓값이 100이므로 N^4는 1억. 최악의 경우에도 어찌저찌 1초 안에는 돌아갈 것 같다.\n",
+    "* N의 최댓값이 100이므로 N^4는 1억. 하지만 벽도 있고, 이미 방문한 칸은 무시하게 되니까 최악의 경우에도 어찌저찌 1초 안에는 돌아갈 것...?\n",
     "\n",
     "#### 해설 본 후\n",
     "* 답지에선 q에 들어가는 원소 정보를 아예 (set, 값)의 형태로 넣어 좀 더 부드럽게(?) 구현했다.\n",
@@ -1553,41 +1553,47 @@
    "source": [
     "from collections import deque\n",
     "\n",
+    "# 로봇이 현재 위치에서 1초 내에 도달할 수 있는(움직일 수 있는) 좌표를 모두 찾는 함수 선언\n",
     "def can_move(board, robot_pos):\n",
-    "    pos1, pos2 = sorted(robot_pos)\n",
-    "    can_move_list = []\n",
+    "    pos1, pos2 = sorted(robot_pos) # 현재 로봇의 좌표를 x축, y축 값으로 오름차순 정렬하여 받아옴\n",
+    "    can_move_list = [] # 로봇의 다음 위치가 될 수 있는 모든 좌표를 모으기 위한 리스트 선언\n",
+    "    \n",
+    "    # 평행 이동을 체크\n",
     "    \n",
     "    # 이동(상 하 좌 우)\n",
     "    dx = [-1, 1, 0, 0]\n",
     "    dy = [0, 0, -1, 1]\n",
     "    \n",
+    "    # 네 방향을 모두 확인\n",
     "    for i in range(4):\n",
     "        n_pos1, n_pos2 = (pos1[0] + dx[i], pos1[1] + dy[i]), (pos2[0] + dx[i], pos2[1] + dy[i]) \n",
     "        \n",
+    "        # 각 방향으로 평행 이동했을 때 벽에 부딪히지 않는다면 이동한 좌표를 can_move_list에 추가\n",
     "        if board[n_pos1[0]][n_pos1[1]] == 0 and board[n_pos2[0]][n_pos2[1]] == 0:\n",
     "            can_move_list.append([n_pos1, n_pos2])\n",
     "            \n",
-    "    # 회전\n",
-    "    # 가로인 경우\n",
+    "    # 회전을 체크\n",
+    "    \n",
+    "    # 로봇이 가로 상태인 경우\n",
     "    if pos1[0] - pos2[0] == 0:\n",
-    "        # 아래 칸으로 회전\n",
-    "        if board[pos1[0]+1][pos1[1]] == 0 and board[pos2[0]+1][pos2[1]] == 0:\n",
-    "            can_move_list.extend([[(pos1[0], pos1[1]), (pos2[0]+1, pos2[1]-1)], [(pos1[0]+1, pos1[1]+1), (pos2[0], pos2[1])]])\n",
-    "        # 위 칸으로 회전\n",
-    "        if board[pos1[0]-1][pos1[1]] == 0 and board[pos2[0]-1][pos2[1]] == 0:\n",
-    "            can_move_list.extend([[(pos1[0], pos1[1]), (pos2[0]-1, pos2[1]-1)], [(pos1[0]-1, pos1[1]+1), (pos2[0], pos2[1])]])\n",
-    "    # 세로인 경우\n",
+    "        # 아래 칸으로 회전하는 경우\n",
+    "        if board[pos1[0]+1][pos1[1]] == 0 and board[pos2[0]+1][pos2[1]] == 0: # 로봇 위치 두 좌표의 아래 칸이 모두 벽이 아니라면\n",
+    "            can_move_list.extend([[(pos1[0], pos1[1]), (pos2[0]+1, pos2[1]-1)], [(pos1[0]+1, pos1[1]+1), (pos2[0], pos2[1])]]) # 회전이 가능하므로 can_move_list에 각각의 위치를 축으로 회전한 좌표를 전부 추가\n",
+    "        # 위 칸으로 회전하는 경우\n",
+    "        if board[pos1[0]-1][pos1[1]] == 0 and board[pos2[0]-1][pos2[1]] == 0: # 로봇 위치 두 좌표의 위 칸이 모두 벽이 아니라면\n",
+    "            can_move_list.extend([[(pos1[0], pos1[1]), (pos2[0]-1, pos2[1]-1)], [(pos1[0]-1, pos1[1]+1), (pos2[0], pos2[1])]]) # 회전이 가능하므로 can_move_list에 각각의 위치를 축으로 회전한 좌표를 전부 추가\n",
+    "    # 로봇이 세로 상태인 경우\n",
     "    else:\n",
     "        # 왼 칸으로 회전\n",
-    "        if board[pos1[0]][pos1[1]-1] == 0 and board[pos2[0]][pos2[1]-1] == 0:\n",
-    "            can_move_list.extend([[(pos1[0], pos1[1]), (pos2[0]-1, pos2[1]-1)], [(pos1[0]+1, pos1[1]-1), (pos2[0], pos2[1])]])\n",
+    "        if board[pos1[0]][pos1[1]-1] == 0 and board[pos2[0]][pos2[1]-1] == 0: # 로봇 위치 두 좌표의 왼 칸이 모두 벽이 아니라면\n",
+    "            can_move_list.extend([[(pos1[0], pos1[1]), (pos2[0]-1, pos2[1]-1)], [(pos1[0]+1, pos1[1]-1), (pos2[0], pos2[1])]]) # 회전이 가능하므로 can_move_list에 각각의 위치를 축으로 회전한 좌표를 전부 추가\n",
     "        # 오른 칸으로 회전\n",
-    "        if board[pos1[0]][pos1[1]+1] == 0 and board[pos2[0]][pos2[1]+1] == 0:\n",
-    "            can_move_list.extend([[(pos1[0], pos1[1]), (pos2[0]-1, pos2[1]+1)], [(pos1[0]+1, pos1[1]+1), (pos2[0], pos2[1])]])\n",
+    "        if board[pos1[0]][pos1[1]+1] == 0 and board[pos2[0]][pos2[1]+1] == 0: # 로봇 위치 두 좌표의 오른 칸이 모두 벽이 아니라면\n",
+    "            can_move_list.extend([[(pos1[0], pos1[1]), (pos2[0]-1, pos2[1]+1)], [(pos1[0]+1, pos1[1]+1), (pos2[0], pos2[1])]]) # 회전이 가능하므로 can_move_list에 각각의 위치를 축으로 회전한 좌표를 전부 추가\n",
     "\n",
     "    return can_move_list\n",
     "\n",
-    "\n",
+    "# 문제를 해결하는 함수 선언\n",
     "def solution(board):\n",
     "    # 지도 크기를 변수로 받음\n",
     "    n = len(board)\n",
@@ -1598,21 +1604,23 @@
     "    robot_pos = [(1, 1), (1, 2), 0] # [pos1, pos2, 이동 횟수]\n",
     "    visited = [] # 좌표 넣을 때 set으로 넣기\n",
     "    \n",
-    "    q = deque()\n",
-    "    q.append(robot_pos)\n",
-    "    visited.append(set([(1, 1), (1, 2)]))\n",
+    "    q = deque() # 큐 생성\n",
+    "    q.append(robot_pos) # 로봇의 처음 위치를 큐에 삽입\n",
+    "    visited.append(set([(1, 1), (1, 2)])) # 방문한 위치에 로봇의 처음 위치 삽입\n",
     "        \n",
-    "    while q:\n",
-    "        pos1, pos2, moving = q.popleft()\n",
+    "    while q: # q에 원소가 있는 동안 계속 반복\n",
+    "        pos1, pos2, moving = q.popleft() # 큐에서 로봇 위치와 이동 횟수 꺼내기\n",
     "        \n",
+    "        # 로봇의 위치 중 한 칸이라도 목적지에 도달했다면 반복을 멈추고 이동 횟수를 리턴\n",
     "        if pos1 == (n, n) or pos2 == (n, n):\n",
     "            return moving\n",
-    "           \n",
+    "        \n",
+    "        # 로봇의 현재 위치에서 갈 수 있는 모든 위치를 확인하여\n",
     "        for n_pos in can_move(board, [pos1, pos2]):\n",
-    "            n_pos_set = set(n_pos)\n",
-    "            if n_pos_set not in visited:\n",
-    "                q.append(n_pos + [moving + 1])\n",
-    "                visited.append(n_pos_set)\n",
+    "            n_pos_set = set(n_pos) # 해당 위치 정보를 set으로 바꾸고\n",
+    "            if n_pos_set not in visited: # 해당 위치 정보 set이 아직 방문하지 않은 위치라면\n",
+    "                q.append(n_pos + [moving + 1]) # 큐에 추가하고\n",
+    "                visited.append(n_pos_set) # visited에 추가\n",
     "                \n",
     "\n",
     "solution([[0, 0, 0, 1, 1],[0, 0, 0, 1, 0],[0, 1, 0, 1, 1],[1, 1, 0, 0, 1],[0, 0, 0, 0, 0]])"
